@@ -25,7 +25,9 @@
 #include <sys/param.h>
 #include <sys/socket.h>
 #include <sys/wait.h>
+#ifdef HAVE_SYS_STATVFS_H
 #include <sys/statvfs.h>
+#endif
 
 #include <ctype.h>
 #include <errno.h>
@@ -840,6 +842,7 @@ do_globbed_ls(struct sftp_conn *conn, char *path, char *strip_path,
 static int
 do_df(struct sftp_conn *conn, char *path, int hflag, int iflag)
 {
+#ifdef USE_STATVFS
 	struct statvfs st;
 	char s_used[FMT_SCALED_STRSIZE];
 	char s_avail[FMT_SCALED_STRSIZE];
@@ -885,6 +888,10 @@ do_df(struct sftp_conn *conn, char *path, int hflag, int iflag)
 		    st.f_blocks));
 	}
 	return 0;
+#else
+	error("client does not support statvfs extension");
+	return -1;
+#endif
 }
 
 /*
